# macrocredit

./: .gitignore  CHANGELOG.md  PROJECT_STATUS.md  README.md  RENAME_GUIDE.html  RENAME_GUIDE.md  project_setup_process.md  pyproject.toml
.docs/: cdx_overlay_strategy.md  persistence_layer_complete.md  technical implementation.txt
.github/: copilot-instructions.md
.github/prompts/: review-implementation-layer.prompt.md
data/: registry.json
docs/: adding_data_providers.md  backtest_layer.md  caching_design.md  cdx_overlay_strategy.md  config_layer.md  data_layer.md  data_layer_complete.md  documentation_structure.md  layer_review_prompt.md  logging_design.md  models_layer.md  persistence_layer.md  python_guidelines.md  signal_registry_usage.md  visualization_design.md
docs/maintenance/: MAINTENANCE.md  Update-Upstream.ps1
docs/prompts/: investment strategy.txt  technical implementation.txt
examples/: README.md  backtest_demo.py  data_demo.py  end_to_end_demo.ipynb  example_data.py  models_demo.py  persistence_demo.py  visualization_demo.py
examples/data/processed/: performance_metrics.json
logs/: run_metadata.json
src/aponyx/: __init__.py  main.py
src/aponyx/backtest/: adapters.py  config.py  protocols.py
src/aponyx/config/: __init__.py
src/aponyx/data/: __init__.py  fetch.py  sample_data.py  sources.py  validation.py
src/aponyx/data/providers/: bloomberg.py
src/aponyx/models/: __init__.py  catalog.py  config.py  registry.py  signal_catalog.json  signals.py
src/aponyx/visualization/: app.py  plots.py  visualizer.py
src/macrocredit/: __init__.py  main.py
src/macrocredit/backtest/: README.md  __init__.py  adapters.py  engine.py  metrics.py  protocols.py
src/macrocredit/config/: __init__.py
src/macrocredit/data/: README.md  __init__.py  cache.py  fetch.py  loader.py  sample_data.py  schemas.py  sources.py  transform.py  validation.py
src/macrocredit/data/providers/: __init__.py  bloomberg.py  file.py
src/macrocredit/models/: README.md  __init__.py  aggregator.py  config.py  registry.py  signal_catalog.json
src/macrocredit/persistence/: README.md  __init__.py  json_io.py  parquet_io.py  registry.py
src/macrocredit/visualization/: __init__.py  app.py  plots.py  visualizer.py
tests/backtest/: __init__.py  test_engine.py
tests/data/: __init__.py  test_bloomberg.py  test_loader.py  test_transform.py  test_validation.py
tests/models/: test_aggregator.py  test_catalog.py  test_registry.py  test_signals.py
tests/persistence/: __init__.py  test_json_io.py  test_parquet_io.py  test_registry.py
tests/visualization/: __init__.py  test_plots.py
