[project]
name = "macrocredit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stabile Frisur", email = "26568863+stabilefrisur@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# optional overrides; defaults expect a single module under src/<name>
module-root = "src"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]