[project]
name = "macrocredit"
version = "0.1.0"
description = "Systematic Macro Credit - Pilot CDX Overlay Strategy Framework"
readme = "README.md"
authors = [
    { name = "Stabile Frisur", email = "26568863+stabilefrisur@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=17.0.0",
    "xbbg>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# optional overrides; defaults expect a single module under src/<name>
module-root = "src"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
]
viz = [
    "plotly>=5.24.0",
    "streamlit>=1.39.0",
    "nbformat>=5.10.0",
    "ipykernel>=6.29.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true